tests/tests/snapshots/test__serde_other__serde-other-adjacent-tag-typescript.snap
---
source: tests/tests/serde_other.rs
assertion_line: 72
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type AdjacentOther = AdjacentOther_Serialize | AdjacentOther_Deserialize;

export type AdjacentOther_Deserialize = { kind: "known"; data: string } | { kind: Exclude<string, "known"> };

export type AdjacentOther_Serialize = { kind: "known"; data: string } | { kind: "Other" };
