tests/tests/snapshots/test__serde_other__serde-other-external-tag-typescript.snap
---
source: tests/tests/serde_other.rs
assertion_line: 84
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type ExternalOther = ExternalOther_Serialize | ExternalOther_Deserialize;

export type ExternalOther_Deserialize = "known" | string;

export type ExternalOther_Serialize = "known" | "Other";
