tests/tests/snapshots/test__serde_other__serde-other-external-unit-unified-typescript.snap
---
source: tests/tests/serde_other.rs
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type ExternalOther = "known" | string;
