tests/tests/snapshots/test__serde_other__serde-other-internal-tag-typescript.snap
---
source: tests/tests/serde_other.rs
assertion_line: 60
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type InternalOther = InternalOther_Serialize | InternalOther_Deserialize;

export type InternalOther_Deserialize = { kind: "known" } | { kind: Exclude<string, "known"> };

export type InternalOther_Serialize = { kind: "known" } | { kind: "Other" };
