tests/tests/snapshots/test__serde_other__serde-other-unified-internal-tag-typescript.snap
---
source: tests/tests/serde_other.rs
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type AdjacentOther = { kind: "known"; data: string } | { kind: Exclude<string, "known"> };

export type ExternalOther = "known" | string;

export type InternalOther = { kind: "known" } | { kind: Exclude<string, "known"> };
